karl/views/static/themedstyles.css
/* ... */
.rss-icon {
    padding-top: 20px;
    text-align: right;
    clear: both;
}

/* Dressed-up search results */

.sras-discreet {
    color: #999999;
    display: block;
}

.sras-header {
    text-align: center;
    padding-bottom: 1em;
}

.sras-header input {
    height: 2em;
}

#sras-content {
    font-size: 12px;
    overflow: hidden;
}

.sras-searchknobs {
    width: 160px;
    float: left;
    border-right: 1px solid #A3A3A3;
    padding-bottom: 9999px;
    margin-bottom: -9999px;
}

.sras-searchknobgroup {
    border-bottom: solid #A3A3A3 1px;
    padding: 1em 0;
}

.sras-searchknobs a,
.sras-searchknobs a:visited {
    text-decoration: none;
    color: #3A74A9;
}

.sras-searchknobs .sras-searchcontent a,
.sras-searchknobs .sras-searchcontent strong {
    padding-left: 5px;
    line-height: 2em;
}

.sras-searchknobs .sras-searchcontent a:hover {
    text-decoration: underline;
}

.sras-searchknobs p {
    margin-top: 0.1em;
    margin-bottom: 0.1em;
}

.sras-searchknobgroup.last {
    border-bottom: none;
}

.sras-searchknobgroup label {
    display: block;
    font-weight: bold;
    margin: 10px 0 3px;
}

.sras-searchknobgroup ul {
    margin: 0;
    padding: 0;
}

.sras-searchknobgroup li {
    display: block;
}

#sras-results {
    margin: 10px;
    float: left;
    width: 700px;
}

.sras-result {
    margin-bottom: 1em;
    clear: both;
}

.sras-result-title,
.sras-result-title:visited {
    font-size: 123%;
    font-weight: bold;
    color: #3A74A9;
}

.sras-summary {
    margin: 0.2em 0;
}

.sras-highlight {
    font-weight: bold;
}

.sras-details,
.sras-details a {
    color: gray;
}

.sras-people-portrait {
    float: left;
    width: 60px;
    height: 60px;
}

.sras-people-portrait img {
    border: none;
}

.sras-people-name {
    font-weight: bold;
}
a.sras-people-name {
    text-decoration: none;
}
a.sras-people-name:hover {
    text-decoration: underline;
}

.sras-people-position {
    color: gray;
    font-weight: normal;
}

.sras-people-location {
    color: gray;
}

#sras-pagination {
    margin: 2em 0 0 170px;
    background-color: #d3d3d3;
    text-align: right;
    padding: 0.4em;
    clear: both;
}

#sras-authorknob, #sras-tagknob {
    padding: 0.2em;
    font-size: 0.8em;
    margin-top: 0.2em;
}

#sras-searchbutton {
    padding: 0.2em;
}

.ui-grid-pagination .ui-icon {
    text-indent: 9999px
}


/* jquery ui format animated loading icon for Smoothness theme */
body .ui-state-default .karl-icon-loading {
    background-image: url("images/karl-icon-loading.gif");
}

/* contentbar is used for wikitoc */
.contentbar-menu {
    display: inline-block;
    margin: 8px 0;
}

.contentbar-wrapper {
    border-bottom: 1px solid #CECECE;
    margin: -20px -9px 16px;
    overflow: visible;
    padding: 0 9px;
}

.contentbar-wrapper ul.menubar {
    display: inline-block;
    margin-top: 4px;
}
.contentbar-wrapper ul.menubar li a {
    line-height: 22px;
}

#karl-wikitoc {
    width: 668px;
}

.preview_dialog {
  text-align: left;
}

